--- a/index.html
+++ b/index.html
@@ -12,7 +12,38 @@
             padding: 0;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
+.question-type-selector {
+    padding: 6px 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    background: white;
+    font-size: 0.9em;
+    cursor: pointer;
+}
 
+.question-type-selector:hover {
+    border-color: #4b6cb7;
+}
+
+.image-url {
+    width: 100%;
+    padding: 0.8rem;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+}
+
+.type-badge {
+    display: inline-block;
+    padding: 2px 8px;
+    border-radius: 10px;
+    font-size: 0.8em;
+    margin-left: 8px;
+}
+
+.badge-multiple { background: #e3f2fd; color: #1565c0; }
+.badge-truefalse { background: #f3e5f5; color: #7b1fa2; }
+.badge-image { background: #e8f5e9; color: #2e7d32; }
         body {
             background-color: #f5f7fa;
             color: #333;
